# api

./: .coveragerc  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  main.py  pyproject.toml  test.docker-compose.yml
.github/scripts/: test
.github/workflows/: build.yml  style.yml  test.yml
alembic/: env.py
alembic/versions/: 05e027b357df_.py  06924a6b32a2_.py  07618cca7754_.py  0b43f8b7c0bd_.py  107317a8b10a_.py  11a93586e827_.py  13f079276533_.py  154a23dbff56_.py  318e669ced0e_.py  4716a65607a8_.py  54d1ba8700a5_.py  5908513aaf0a_.py  598cb8aecff8_add_identifiers.py  5db2d9c38f21_slugfy.py  653df1a5eaa7_.py  68c2cae2855a_remove_unique_identifier.py  6cbc43823f31_.py  761ca70b556c_.py  7f9038506177_.py  887880008f5d_.py  90f350c5275c_identifiers_as_index.py  9bc0ddde20f8_.py  9f876af59e81_.py  b42c07917e8c_.py  cb6962fc2524_.py  d455a3b4f261_.py  d621a3e350a9_.py  d8c61ee873e3_.py  e4bd97b9df9c_.py  ec0034ef61a3_.py  ec0bb5820a1f_.py  ec1ccec76843_.py  edef3369fcd5_.py  f754a07b8805_.py  fa9acf32931d_.py
app/: database.py  deps.py  main.py  router.py  settings.py
app/crud/: __init__.py  accuracy_type.py  base.py  cpu.py  dataset.py  gpu.py  message.py  model.py  paper.py  paper_with_code.py  submission.py  task.py  tpu.py  user.py
app/database/: base.py  init_db.py  session.py
app/models/: __init__.py  accuracy_type.py  accuracy_value.py  cpu.py  dataset.py  gpu.py  message.py  model.py  paper.py  revision.py  submission.py  task.py  tpu.py  (+3 more)
tests/: test_schemas.py
(+79 files in other folders)
